# nfch

./: .pre-commit-config.yaml  pyproject.toml
src/nfch/: __init__.py  file_manager.py  main.py  message_manager.py  proj.py  utils.py  workflow.py
src/nfch/diffabun/: __init__.py  clean.py  prepare.py
src/nfch/project_init/: __init__.py  project_init.py  project_init_utils.py
src/nfch/rnaseq/: __init__.py  clean.py  prepare.py
tests/: test_message_manager.py
