[project]
name = "nfch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "H. Emre Etlioglu", email = "emre.etlioglu@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
 "typer>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
nfch = "nfch.main:app"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ERA", "TD002", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[dependency-groups]
dev = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
